# TokenTracker

./: .gitignore  CONTEXT.md  DESIGN-THREE-TIER.md  DESIGN-V2.md  DESIGN-V3.md  DESIGN-V4.md  DESIGN-V5.md  LICENSE  PLAN.md  PRIVACY.md  Package.swift  README.md  RELEASING.md
.github/workflows/: ci.yml  release.yml
Resources/: Info.plist
Sources/AIUsageBarApp/: AIUsageBarMain.swift  ProviderPresentation.swift  StatusItemController.swift  UsageModel.swift  UsagePopoverView.swift
Sources/AIUsageBarCore/: LocalTokenScanner.swift  ProviderClients.swift  SettingsAndLocalization.swift  UsageModels.swift  UsageParsers.swift  UsageSnapshotStore.swift
Sources/AIUsageBarCoreTests/: main.swift
desktop/: package-lock.json  package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: desktop.rs  lib.rs  main.rs  service.rs
desktop/src-tauri/tests/: cache_contract.rs  credentials_contract.rs  hover_removal_guard.rs  local_tokens_contract.rs  tray_contract.rs  usage_contract.rs
desktop/ui/: app.js  index.html  styles.css
scripts/: build-app.sh  run-app.sh
