[package]
name = "aiusagebar"
version = "0.1.0"
edition = "2024"

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[lib]
name = "aiusagebar_core"
path = "src/lib.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
httpdate = "1"
keyring = "4.1.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.11.5", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2.5.4"
thiserror = "2"
tokio = { version = "1", features = ["macros", "sync", "time"] }
walkdir = "2"
whoami = "2"

[dev-dependencies]
tempfile = "3"
